--- a/src/Scss/public.scss
+++ b/src/Scss/public.scss
@@ -10,7 +10,7 @@
     background-color: red;
   }
   #flipbook > div:nth-child(2) {
-    background-color: blue;
+    background-color: black;
   }
   #flipbook > div:nth-child(3) {
     background-color: yellow;
